feat(platform): checkpoint surpass roadmap milestone
Checkpoint current Athena platform delivery across preview governance, sites and activity, content model and associations, shared links, ratings, preferences, workflow and search operator surfaces.